Fix scrollbar issue for candidate item as well as the filter items

--- a/src/sass/components/_issues.scss
+++ b/src/sass/components/_issues.scss
@@ -300,7 +300,7 @@ $menu-item-padding: 7px;
 
 .card-main {
   position: relative !important;
-  overflow: auto !important;
+  overflow: auto;
 }
 
 .dropdown-divider {
